feat: llama gguf 모델 추가 및 실행 환경 설정
- Dockerfile: nvidia/cuda 이미지 변경 + llama-cpp-python 설치
- llm.py: llama 모델 로드 + generate_response 생성
- main.py: llama chat api 생성
- docker-compose.yml: runtime gpu 사용 설정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,14 @@ services:
       retries: 10
 
   backend:
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    runtime: nvidia
     build: ./backend
     container_name: backend
     depends_on:
@@ -32,6 +40,7 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/app
+      - ./backend:/models:/app/models
     restart: always
 
   pgadmin:
